--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,7 @@ img.show-mob { display: none; }
     justify-content: center;
     height: 40%;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .head-content .state-info-row .rest {
